# simple-bazel-project

./: BUILD.bazel  README.md  WORKSPACE
proto/: BUILD.bazel  foo.proto  foo_service.proto
rpc_server/cmd/: BUILD.bazel  main.go
rpc_server/pkg/: BUILD.bazel  server.go
