load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "foo_service_proto",
    srcs = ["foo_service.proto"],
    visibility = ["//visibility:public"],
    deps = [":foo_proto"],
)

go_proto_library(
    name = "sample_protos_lib",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rlvoyer/simple_bazel_project/protos",
    protos = [
        ":foo_proto",
        ":foo_service_proto",
    ],
    visibility = ["//visibility:public"],
)
