load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "cmd",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto:sample_protos_lib",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],    
)
